--- a/scripts/ManiesCleanToPoint.Rmd
+++ b/scripts/ManiesCleanToPoint.Rmd
@@ -73,7 +73,9 @@ f8_dates
 ```
 
 
-
+```{r}
+f8_dates %>% distinct(site_id, plot_id, fire_id, burn_unburn) %>% write.csv(., '../outputs/pairs/manies.csv')
+```
 
 
 
